Overflow issues solved

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,3 @@
 @tailwind utilities;
 
 
-@media (max-width: 768px) {
-    html, body{
-        overflow-x: hidden;
-    }
-    
-}
